--- a/src/app/component/main-page/admin-main-page/admin-main-page.component.css
+++ b/src/app/component/main-page/admin-main-page/admin-main-page.component.css
@@ -31,7 +31,6 @@ html, body {
 
 header {
     opacity: .8;
-    height: 200px;
 }
 
 .pod {
